--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "bootstrap-icons": "^1.2.2",
     "firebase": "^8.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
