--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@syncfusion/ej2-angular-grids": "^18.4.33",
     "bootstrap-icons": "^1.2.2",
     "firebase": "^8.2.1",
     "ngx-toastr": "^13.2.0",
