--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,7 @@
     "@rxweb/reactive-form-validators": "^2.1.2",
     "@syncfusion/ej2-angular-grids": "^18.4.33",
     "@syncfusion/ej2-angular-inputs": "^18.4.33",
+    "angular-ng-autocomplete": "^2.0.4",
     "bootstrap-icons": "^1.3.0",
     "firebase": "^8.2.2",
     "ngx-toastr": "^13.2.0",
