--- a/front-end/package.json
+++ b/front-end/package.json
@@ -28,6 +28,7 @@
     "angular-ng-autocomplete": "^2.0.4",
     "bootstrap-icons": "^1.3.0",
     "firebase": "^8.2.2",
+    "ng-onload": "^0.8.0",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
