--- a/front-end/package.json
+++ b/front-end/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.3.0",
     "firebase": "^8.2.2",
     "ng-onload": "^0.8.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
